syntax = "proto3";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/events-processing-proto/gen/proto/go/api/grpc/v1/social";
//option go_package = "api/grpc/v1/social";

message SocialIdGrpcResponse {
  string id = 1;
}